@@ -13,4 +13,7 @@ aes/gem_rsc.c
 desk/desk_rsc.c
 desk/icons.c
 
-# cli subdir is currently not translated
+cli/cmdint.c
+cli/cmdmain.c
+cli/cmdparse.c
+cli/cmdutil.c
