@@ -6052,3 +6052,4 @@ Start... early ages
 2015-03-11
 - cli/cmd.h cli/cmdmain.c cli/cmdparse.c: Replace '"' with #define so that
   modules can be processed by the bug tool. (RFB)
+- po/POTFILES.in: Add appropriate files in cli/ to translation list. (RFB)
